--- a/style.css
+++ b/style.css
@@ -70,9 +70,27 @@ main {
   padding: 25px;
   border-radius: 15px;
 }
+
+/* Image styling */
+
+.image-container {
+  position: relative;
+}
 .cube-image {
+  display: block;
   width: 100%;
-  border-radius: 10px;
+  height: auto;
+  border-radius: 7px;
+  backface-visibility: hidden;
+  opacity: 1;
+}
+
+.image-overlay {
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .card-heading {
   font-size: 2.2rem;
@@ -140,4 +158,30 @@ main {
 }
 .creators-name {
   color: #fff;
+}
+
+/* Hover Effect */
+
+.creators-name:hover,
+.card-heading:hover {
+  color: var(--cyan);
+  cursor: pointer;
+}
+
+.cube-image:hover {
+  color: var(--cyan);
+}
+
+.image-container:hover {
+  background-color: var(--cyan);
+  border-radius: 8px;
+  opacity: 0.8;
+  cursor: pointer;
+}
+.image-container:hover .cube-image {
+  opacity: 0.4;
+}
+
+.image-container:hover .image-overlay {
+  opacity: 1;
 }
